Fix scrolling overflow for sidebar

--- a/app/assets/stylesheets/02_sidebar_main.scss
+++ b/app/assets/stylesheets/02_sidebar_main.scss
@@ -114,7 +114,7 @@ div.main {
   color: white;
   display: none;
   overflow-y: scroll;
-  height: 80%;
+  height: 100%;
 }
 
 .sidebar-today, .sidebar-save {
@@ -217,11 +217,10 @@ div.main {
   width: 268px;
   height: 70px;
   background-color: $green;
-  position: relative;
-  bottom: -30px;
+  position: fixed;
+  bottom: 0;
   padding: 0;
   padding-top: 10px;
-
   border-top: 1px solid #DBDBDB;
   display:none;
   pre {
@@ -235,7 +234,6 @@ div.main {
 
   }
   button {
-
     position: relative;
     left: 210px;
     bottom: 25px;
@@ -256,7 +254,6 @@ div.main {
 }
 
 .sidebar {
-
   button.getting-started {
     background-color: #9FABA1;
     margin-top: 100px;
